# DimatechTeskTask

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: src.sh
liquibase_/: changelog.sql
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 6419a1c82818_.py  eb9af20abc6e_.py  fa95d56617ea_.py
src/api/v1/: __init__.py  auth.py  routes.py
src/app/application/: dto.py  get_accounts_usecase.py  get_payments_usecase.py  get_users_usecase.py  getme_usecase.py  login_usecase.py  payment_usecase.py  payment_verify_usecase.py  register_user_usecase.py  uow_protocol.py
src/app/domain/: account.py  admin.py  payment.py  user.py
src/app/infrastructure/models/: account_model.py  admin_model.py  payment_model.py  user_model.py
src/app/infrastructure/repositories/: __init__.py  account_repository.py  admin_repository.py  payment_repository.py  user_repository.py
src/app/infrastructure/security/: security.py
src/app/infrastructure/utils/: security.py
src/app/schemas/: requests.py  responses.py
src/core/: config.py  container.py  database.py  exception.py  uow.py
