[project]
name = "dimatech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.11",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "gunicorn>=23.0.0",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "ruff>=0.11.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]


[tool.ruff]
line-length = 100  
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]  
ignore = [
    "E501", "D", "UP035", "ANN401",
    "B010", "B009", "SIM117", "EM101",
    "TRY003", "FAST002", "B008", "TID252",
    "SIM102"
]

[tool.mypy]
files = "src/"
ignore_missing_imports = true
